--- a/egyeb.html
+++ b/egyeb.html
@@ -64,16 +64,16 @@
 		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<h2>Kagylós fényképtartó</h2>
+				<h2>Egyéb termékek</h2>
 				<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 				<section class="product">
-					<img src="images/photo_frame1.jpg">
+					<img src="images/flower_car.jpg">
 					<div>
-						<h2>Kisméretű kagylós fényképtartó 1</h2>
+						<h2>Kerti virágtartó szekér</h2>
 						<ul>
-							<li>10x15 cm fekvő fényképhez</li>
-							<li>piros üveg, asztali</li>
-							<li>2000 Ft</li>
+							<li>20x25x20 cm</li>
+							<li>meggyfa</li>
+							<li>10.000 Ft</li>
 						</ul>
 					</div>
 					<button>Rendelés</button>
@@ -82,13 +82,13 @@
 				<hr>
 
 				<section class="product">
-					<img src="images/photo_frame2.jpg">
+					<img src="images/windmill.jpg">
 					<div>
-						<h2>Kisméretű kagylós fényképtartó 2</h2>
+						<h2>Kerti dekoratív szélmalom</h2>
 						<ul>
-							<li>10x15 cm fekvő fényképhez</li>
-							<li>fekete üveg, asztali</li>
-							<li>2000 Ft</li>
+							<li>60 cm magas</li>
+							<li>diófa</li>
+							<li>9000 Ft</li>
 						</ul>
 					</div>
 					<button>Rendelés</button>
@@ -97,17 +97,18 @@
 				<hr>
 
 				<section class="product">
-					<img src="images/photo_frame_hybrid.jpg">
+					<img src="images/candle_holder.jpg">
 					<div>
-						<h2>Kisméretű kagylós fényképtartó és tolltartó</h2>
+						<h2>Kagylós gyertyatartó</h2>
 						<ul>
-							<li>10x15 cm álló fényképhez</li>
-							<li>tükör, hátul írószertartóval</li>
-							<li>2500 Ft</li>
+							<li>20x15x6 cm</li>
+							<li>üveg és tojás, többféle színben</li>
+							<li>3000 Ft</li>
 						</ul>
 					</div>
 					<button>Rendelés</button>
 				</section>
+
 			</div>
 		</div>
 
