--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 								</ul>
 							</li>
 
-							<li><a href="generic.html">Rendelés</a></li>
+							<li><a href="rendeles.html">Rendelés</a></li>
 							<li><a href="index.html#footer">Kapcsolat</a></li>
-							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
 
@@ -82,7 +81,7 @@
 
 								<article class="style2">
 									<span class="image">
-										<img src="images/default.jpg" alt="" />
+										<img src="images/wooden_flower_pot.jpg" alt="" />
 									</span>
 									<a href="viragtarto.html">
 										<h2>Fa virágtartók</h2>										
@@ -107,7 +106,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/default.jpg" alt="" />
+										<img src="images/mirror.jpg" alt="" />
 									</span>
 									<a href="tukor.html">
 										<h2>Kagylós tükör</h2>
@@ -132,7 +131,7 @@
 
 								<article class="style2">
 									<span class="image">
-										<img src="images/candle_holder.jpg" alt="" />
+										<img src="images/flower_car.jpg" alt="" />
 									</span>
 									<a href="egyeb.html">
 										<h2>Egyéb termékek</h2>										
