--- a/tukor.html
+++ b/tukor.html
@@ -64,50 +64,21 @@
 		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<h2>Kagylós fényképtartó</h2>
+				<h2>Kagylós tükör</h2>
 				<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 				<section class="product">
-					<img src="images/photo_frame1.jpg">
+					<img src="images/mirror.jpg">
 					<div>
-						<h2>Kisméretű kagylós fényképtartó 1</h2>
+						<h2>Fali kagylós tükör</h2>
 						<ul>
-							<li>10x15 cm fekvő fényképhez</li>
-							<li>piros üveg, asztali</li>
-							<li>2000 Ft</li>
+							<li>85x95 cm</li>
+							<li>tükör, falra akasztható</li>
+							<li>4500 Ft</li>
 						</ul>
 					</div>
 					<button>Rendelés</button>
 				</section>
 
-				<hr>
-
-				<section class="product">
-					<img src="images/photo_frame2.jpg">
-					<div>
-						<h2>Kisméretű kagylós fényképtartó 2</h2>
-						<ul>
-							<li>10x15 cm fekvő fényképhez</li>
-							<li>fekete üveg, asztali</li>
-							<li>2000 Ft</li>
-						</ul>
-					</div>
-					<button>Rendelés</button>
-				</section>
-
-				<hr>
-
-				<section class="product">
-					<img src="images/photo_frame_hybrid.jpg">
-					<div>
-						<h2>Kisméretű kagylós fényképtartó és tolltartó</h2>
-						<ul>
-							<li>10x15 cm álló fényképhez</li>
-							<li>tükör, hátul írószertartóval</li>
-							<li>2500 Ft</li>
-						</ul>
-					</div>
-					<button>Rendelés</button>
-				</section>
 			</div>
 		</div>
 
