--- a/generic.html
+++ b/generic.html
@@ -41,9 +41,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Főoldal</a></li>
-							<li><a href="generic.html">Termékek</a></li>
-							<li><a href="generic.html">Rendelés</a></li>
-							<li><a href="generic.html">Kapcsolat</a></li>
+							<li><a href="rendeles.html">Termékek</a></li>
+							<li><a href="rendeles.html">Rendelés</a></li>
+							<li><a href="rendeles.html">Kapcsolat</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
