--- a/iroszertarto.html
+++ b/iroszertarto.html
@@ -56,24 +56,23 @@
 							</ul>
 						</li>
 
-						<li><a href="generic.html">Rendelés</a></li>
+						<li><a href="rendeles.html">Rendelés</a></li>
 						<li><a href="index.html#footer">Kapcsolat</a></li>
-						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
 
 		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<h2>Kagylós fényképtartó</h2>
+				<h2>Kagylós írószertartó</h2>
 				<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 				<section class="product">
-					<img src="images/photo_frame1.jpg">
+					<img src="images/pen_holder1.jpg">
 					<div>
-						<h2>Kisméretű kagylós fényképtartó 1</h2>
+						<h2>Kagylós írószertartó 1</h2>
 						<ul>
-							<li>10x15 cm fekvő fényképhez</li>
-							<li>piros üveg, asztali</li>
+							<li>10x15x5 cm</li>
+							<li>tükör és üveg, belül 4 részre osztva</li>
 							<li>2000 Ft</li>
 						</ul>
 					</div>
@@ -83,32 +82,18 @@
 				<hr>
 
 				<section class="product">
-					<img src="images/photo_frame2.jpg">
+					<img src="images/pen_holder2.jpg">
 					<div>
-						<h2>Kisméretű kagylós fényképtartó 2</h2>
+						<h2>Kagylós írószertartó 2</h2>
 						<ul>
-							<li>10x15 cm fekvő fényképhez</li>
-							<li>fekete üveg, asztali</li>
-							<li>2000 Ft</li>
+							<li>20x15x6 cm</li>
+							<li>tükör és üveg, osztatlan</li>
+							<li>3000 Ft</li>
 						</ul>
 					</div>
 					<button>Rendelés</button>
 				</section>
 
-				<hr>
-
-				<section class="product">
-					<img src="images/photo_frame_hybrid.jpg">
-					<div>
-						<h2>Kisméretű kagylós fényképtartó és tolltartó</h2>
-						<ul>
-							<li>10x15 cm álló fényképhez</li>
-							<li>tükör, hátul írószertartóval</li>
-							<li>2500 Ft</li>
-						</ul>
-					</div>
-					<button>Rendelés</button>
-				</section>
 			</div>
 		</div>
 
