--- a/viragmintas-kaspo.html
+++ b/viragmintas-kaspo.html
@@ -56,9 +56,8 @@
 							</ul>
 						</li>
 
-						<li><a href="generic.html">Rendelés</a></li>
+						<li><a href="rendeles.html">Rendelés</a></li>
 						<li><a href="index.html#footer">Kapcsolat</a></li>
-						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
 
